--- a/cpp/src/arrow/dataset/CMakeLists.txt
+++ b/cpp/src/arrow/dataset/CMakeLists.txt
@@ -97,88 +97,36 @@ if(ARROW_BUILD_STATIC AND WIN32)
 endif()
 
 if(ARROW_TEST_LINKAGE STREQUAL "static")
-  set(ARROW_DATASET_TEST_LINK_LIBS arrow_dataset_static arrow_dataset_testing_static ${ARROW_TEST_STATIC_LINK_LIBS})
+  set(ARROW_DATASET_TEST_LINK_LIBS arrow_dataset_static ${ARROW_TEST_STATIC_LINK_LIBS})
 else()
-  set(ARROW_DATASET_TEST_LINK_LIBS arrow_dataset_shared arrow_dataset_testing_shared ${ARROW_TEST_SHARED_LINK_LIBS})
+  set(ARROW_DATASET_TEST_LINK_LIBS arrow_dataset_shared ${ARROW_TEST_SHARED_LINK_LIBS})
 endif()
 
 foreach(LIB_TARGET ${ARROW_DATASET_LIBRARIES})
   target_compile_definitions(${LIB_TARGET} PRIVATE ARROW_DS_EXPORTING)
 endforeach()
 
-# Define arrow_dataset_testing library
+# Define arrow_dataset_testing object library for common test files
 if(ARROW_TESTING)
   if(ARROW_BUILD_SHARED AND ARROW_BUILD_STATIC)
-    set(ARROW_DATASET_TESTING_SHARED_LINK_LIBS arrow_dataset_shared)
     set(ARROW_DATASET_TESTING_STATIC_LINK_LIBS arrow_dataset_static)
-    set(ARROW_DATASET_TESTING_SHARED_INSTALL_INTERFACE_LIBS
-        ArrowDataset::arrow_dataset_shared)
-    set(ARROW_DATASET_TESTING_STATIC_INSTALL_INTERFACE_LIBS
-    ArrowDataset::arrow_dataset_static)
   elseif(ARROW_BUILD_SHARED)
-    set(ARROW_DATASET_TESTING_SHARED_LINK_LIBS arrow_dataset_shared)
     set(ARROW_DATASET_TESTING_STATIC_LINK_LIBS arrow_dataset_shared)
-    set(ARROW_DATASET_TESTING_SHARED_INSTALL_INTERFACE_LIBS
-    ArrowDataset::arrow_dataset_shared)
-    set(ARROW_DATASET_TESTING_STATIC_INSTALL_INTERFACE_LIBS
-    ArrowDataset::arrow_dataset_shared)
   else()
-    set(ARROW_DATASET_TESTING_SHARED_LINK_LIBS arrow_dataset_static)
     set(ARROW_DATASET_TESTING_STATIC_LINK_LIBS arrow_dataset_static)
-    set(ARROW_DATASET_TESTING_SHARED_INSTALL_INTERFACE_LIBS
-    ArrowDataset::arrow_dataset_static)
-    set(ARROW_DATASET_TESTING_STATIC_INSTALL_INTERFACE_LIBS
-    ArrowDataset::arrow_dataset_static)
   endif()
   if(ARROW_ACERO_TEST_LINKAGE STREQUAL "shared")
-    list(APPEND ARROW_DATASET_TESTING_SHARED_LINK_LIBS arrow_testing_shared)
     list(APPEND ARROW_DATASET_TESTING_STATIC_LINK_LIBS arrow_testing_shared)
-    list(APPEND ARROW_DATASET_TESTING_SHARED_INSTALL_INTERFACE_LIBS
-         ArrowTesting::arrow_testing_shared)
-    list(APPEND ARROW_DATASET_TESTING_STATIC_INSTALL_INTERFACE_LIBS
-         ArrowTesting::arrow_testing_shared)
-    list(APPEND ARROW_DATASET_TESTING_SHARED_LINK_LIBS arrow_acero_testing_shared)
-    list(APPEND ARROW_DATASET_TESTING_STATIC_LINK_LIBS arrow_acero_testing_shared)
-    list(APPEND ARROW_DATASET_TESTING_SHARED_INSTALL_INTERFACE_LIBS
-         ArrowAcero::arrow_acero_testing_shared)
-    list(APPEND ARROW_DATASET_TESTING_STATIC_INSTALL_INTERFACE_LIBS
-         ArrowAcero::arrow_acero_testing_shared)
   else()
-    list(APPEND ARROW_DATASET_TESTING_SHARED_LINK_LIBS arrow_testing_static)
     list(APPEND ARROW_DATASET_TESTING_STATIC_LINK_LIBS arrow_testing_static)
-    list(APPEND ARROW_DATASET_TESTING_SHARED_INSTALL_INTERFACE_LIBS
-         ArrowTesting::arrow_testing_static)
-    list(APPEND ARROW_DATASET_TESTING_STATIC_INSTALL_INTERFACE_LIBS
-         ArrowTesting::arrow_testing_static)
-    list(APPEND ARROW_DATASET_TESTING_SHARED_LINK_LIBS arrow_acero_testing_static)
-    list(APPEND ARROW_DATASET_TESTING_STATIC_LINK_LIBS arrow_acero_testing_static)
-    list(APPEND ARROW_DATASET_TESTING_SHARED_INSTALL_INTERFACE_LIBS
-        ArrowAcero::arrow_acero_testing_static)
-    list(APPEND ARROW_DATASET_TESTING_STATIC_INSTALL_INTERFACE_LIBS
-        ArrowAcero::arrow_acero_testing_static)
   endif()
-  list(APPEND ARROW_DATASET_TESTING_SHARED_LINK_LIBS ${ARROW_DATASET_TEST_INTERFACE_LIBS})
-  list(APPEND ARROW_DATASET_TESTING_STATIC_LINK_LIBS ${ARROW_DATASET_TEST_INTERFACE_LIBS})
-  add_arrow_lib(arrow_dataset_testing
-                OUTPUTS
-                ARROW_DATASET_TESTING_LIBRARIES
-                SOURCES
-                test_util_internal.cc
-                DEPENDENCIES
-                ${ARROW_GTEST_GTEST}
-                arrow_dependencies
-                SHARED_LINK_LIBS
-                ${ARROW_DATASET_TESTING_SHARED_LINK_LIBS}
-                SHARED_INSTALL_INTERFACE_LIBS
-                ${ARROW_DATASET_TESTING_SHARED_INSTALL_INTERFACE_LIBS}
-                STATIC_LINK_LIBS
-                ${ARROW_DATASET_TESTING_STATIC_LINK_LIBS}
-                STATIC_INSTALL_INTERFACE_LIBS
-                ${ARROW_DATASET_TESTING_STATIC_INSTALL_INTERFACE_LIBS})
-
-  foreach(LIB_TARGET ${ARROW_DATASET_TESTING_LIBRARIES})
-    target_compile_definitions(${LIB_TARGET} PRIVATE ARROW_DATASET_EXPORTING)
-  endforeach()
+  list(APPEND ARROW_DATASET_TESTING_STATIC_LINK_LIBS arrow_acero_testing)
+  add_library(arrow_dataset_testing OBJECT test_util_internal.cc)
+  # Even though this is still just an object library we still need to "link" our
+  # dependencies so that include paths are configured correctly
+  target_link_libraries(arrow_dataset_testing ${ARROW_DATASET_TESTING_STATIC_LINK_LIBS})
+  target_link_libraries(arrow_dataset_testing ${ARROW_GTEST_GTEST})
+  list(APPEND ARROW_DATASET_TEST_LINK_LIBS arrow_acero_testing arrow_dataset_testing)
 endif()
 
 
