--- a/dev/tasks/docs/github.linux.yml
+++ b/dev/tasks/docs/github.linux.yml
@@ -21,13 +21,61 @@
 
 jobs:
   test:
-    name: Docs Preview 
+    name: Docs Preview
     runs-on: ubuntu-latest
 {{ macros.github_set_env(env) }}
     steps:
       {{ macros.github_checkout_arrow(fetch_depth=fetch_depth|default(1))|indent }}
       {{ macros.github_install_archery()|indent }}
 
+      - name: Free up disk space
+        run: |
+          df -h
+          echo "::group::/usr/local/*"
+          du -hsc /usr/local/*
+          echo "::endgroup::"
+          echo "::group::/usr/local/bin/*"
+          du -hsc /usr/local/bin/*
+          echo "::endgroup::"
+          # ~1GB (From 1.2GB to 214MB)
+          sudo rm -rf \
+            /usr/local/bin/aliyun \
+            /usr/local/bin/azcopy \
+            /usr/local/bin/bicep \
+            /usr/local/bin/cmake-gui \
+            /usr/local/bin/cpack \
+            /usr/local/bin/helm \
+            /usr/local/bin/hub \
+            /usr/local/bin/kubectl \
+            /usr/local/bin/minikube \
+            /usr/local/bin/node \
+            /usr/local/bin/packer \
+            /usr/local/bin/pulumi* \
+            /usr/local/bin/stack \
+            /usr/local/bin/terraform || :
+          echo "::group::/usr/local/share/*"
+          du -hsc /usr/local/share/*
+          echo "::endgroup::"
+          # 1.3GB
+          sudo rm -rf /usr/local/share/powershell || :
+          echo "::group::/opt/*"
+          du -hsc /opt/*
+          echo "::endgroup::"
+          echo "::group::/opt/hostedtoolcache/*"
+          du -hsc /opt/hostedtoolcache/*
+          echo "::endgroup::"
+          # 5.3GB
+          sudo rm -rf /opt/hostedtoolcache/CodeQL || :
+          # 1.4GB
+          sudo rm -rf /opt/hostedtoolcache/go || :
+          # 489MB
+          sudo rm -rf /opt/hostedtoolcache/PyPy || :
+          # 1.2GB
+          sudo rm -rf /opt/hostedtoolcache/Python || :
+          # 376MB
+          sudo rm -rf /opt/hostedtoolcache/node || :
+          df -h
+          df -h
       - name: Execute Docker Build
         shell: bash
         env:
@@ -55,7 +103,7 @@ jobs:
           {%- raw %}
           AWS_ACCESS_KEY_ID: ${{ secrets.CROSSBOW_DOCS_AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.CROSSBOW_DOCS_AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: ${{ secrets.CROSSBOW_DOCS_S3_BUCKET_REGION }} 
+          AWS_DEFAULT_REGION: ${{ secrets.CROSSBOW_DOCS_S3_BUCKET_REGION }}
           BUCKET: ${{ secrets.CROSSBOW_DOCS_S3_BUCKET }}
           {% endraw %}
         run: |
