Ensure using the latest base-files

--- a/dev/tasks/linux-packages/apache-arrow-apt-source/apt/debian-trixie/Dockerfile
+++ b/dev/tasks/linux-packages/apache-arrow-apt-source/apt/debian-trixie/Dockerfile
@@ -31,6 +31,7 @@ RUN \
   quiet=$([ "${DEBUG}" = "yes" ] || echo "-qq") && \
   apt update ${quiet} && \
   apt install -y -V ${quiet} \
+    base-files \
     build-essential \
     debhelper \
     devscripts \
