--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -77,7 +77,7 @@ jobs:
         run: archery docker push debian-js
 
   macos:
-    name: AMD64 macOS 11 NodeJS ${{ matrix.node }}
+    name: AMD64 macOS 11 NodeJS ${{ matrix.node }} (shard=${{ matrix.shard }})
     runs-on: macos-latest
     if: github.event_name == 'push'
     timeout-minutes: 60
@@ -85,6 +85,7 @@ jobs:
       fail-fast: false
       matrix:
         node: [18]
+        shard: [1/4, 2/4, 3/4, 4/4]
     steps:
       - name: Checkout Arrow
         uses: actions/checkout@v3
@@ -99,7 +100,7 @@ jobs:
         run: ci/scripts/js_build.sh $(pwd)
       - name: Test
         shell: bash
-        run: ci/scripts/js_test.sh $(pwd)
+        run: ci/scripts/js_test.sh $(pwd) ${{ matrix.shard }}
 
   windows:
     name: AMD64 Windows NodeJS ${{ matrix.node }}
