--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,6 +24,7 @@ on:
       - 'ci/docker/*_go.dockerfile'
       - 'ci/scripts/go_*'
       - 'go/**'
+      - 'cpp/src/arrow/c/**'  # for C Data Interface integration tests
   pull_request:
     paths:
       - '.github/workflows/go.yml'
@@ -31,6 +32,7 @@ on:
       - 'ci/docker/**'
       - 'ci/scripts/go_*'
       - 'go/**'
+      - 'cpp/src/arrow/c/**'  # for C Data Interface integration tests
 
 concurrency:
   group: ${{ github.repository }}-${{ github.head_ref || github.sha }}-${{ github.workflow }}
