fix matrix property name
Signed-off-by: abetomo <abe@enzou.tokyo>

--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -94,9 +94,9 @@ jobs:
         uses: actions/cache@v3
         with:
           path: js/.jest-cache
-          key: js-jest-cache-${{ runner.os }}-${{ matrix.node-version }}-${{ hashFiles('js/yarn.lock') }}
+          key: js-jest-cache-${{ runner.os }}-${{ matrix.node }}-${{ hashFiles('js/yarn.lock') }}
           restore-keys: |
-            js-jest-cache-${{ runner.os }}-${{ matrix.node-version }}-
+            js-jest-cache-${{ runner.os }}-${{ matrix.node }}-
             js-jest-cache-${{ runner.os }}-
       - name: Install NodeJS
         uses: actions/setup-node@v3
@@ -126,9 +126,9 @@ jobs:
         uses: actions/cache@v3
         with:
           path: js/.jest-cache
-          key: js-jest-cache-${{ runner.os }}-${{ matrix.node-version }}-${{ hashFiles('js/yarn.lock') }}
+          key: js-jest-cache-${{ runner.os }}-${{ matrix.node }}-${{ hashFiles('js/yarn.lock') }}
           restore-keys: |
-            js-jest-cache-${{ runner.os }}-${{ matrix.node-version }}-
+            js-jest-cache-${{ runner.os }}-${{ matrix.node }}-
             js-jest-cache-${{ runner.os }}-
       - name: Install NodeJS
         uses: actions/setup-node@v3
