--- a/dev/tasks/java-jars/github.yml
+++ b/dev/tasks/java-jars/github.yml
@@ -25,6 +25,13 @@ jobs:
     {% set arch = '${{ matrix.platform.arch }}' %}
     name: Build C++ libraries Ubuntu {{ arch }}
     runs-on: {{ '${{ matrix.platform.runs_on }}' }}
+    env:
+      # archery uses these environment variables
+      {% if arch == "amd64" %}
+      ARCH: amd64
+      {% else %}
+      ARCH: arm64v8
+      {% endif %}
     strategy:
       fail-fast: false
       matrix:
