--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -36,7 +36,7 @@
 /cpp/src/arrow/util/async* @westonpace
 /cpp/src/arrow/util/future* @westonpace
 /cpp/src/arrow/util/thread* @westonpace
-/cpp/src/parquet @wjones127 @wgtmac
+/cpp/src/parquet @wgtmac
 /cpp/src/skyhook @westonpace
 /csharp/ @westonpace
 /go/ @zeroshade
