GH-36456: [R] Remove system OpenSSL to avoid mixing OpenSSL versions

--- a/dev/tasks/r/github.packages.yml
+++ b/dev/tasks/r/github.packages.yml
@@ -167,6 +167,10 @@ jobs:
 
           rig system setup-user-lib
           rig system add-pak
+
+          # ensure removing OpenSSL to avoid mixing OpenSSL in the
+          # default path and OpenSSL installed by autobrew
+          brew uninstall openssl || :
       {{ macros.github_setup_local_r_repo(false, true)|indent }}
       - name: Prepare Dependency Installation
 
