--- a/dev/tasks/r/github.macos.autobrew.yml
+++ b/dev/tasks/r/github.macos.autobrew.yml
@@ -39,9 +39,9 @@ jobs:
         run: |
           # minio and sccache are pre-installed on the self-hosted 10.13 runner
           if [ {{ '${{ matrix.platform }}' }} != macos-10.13  ]; then
-            # ensure removing OpenSSL to avoid mixing OpenSSL in the
+            # ensure unlinking OpenSSL to avoid mixing OpenSSL in the
             # default path and OpenSSL installed by autobrew
-            brew uninstall openssl || :
+            brew unlink openssl || :
             # install minio for tests
             brew install minio
             brew install sccache
