--- a/dev/tasks/r/github.packages.yml
+++ b/dev/tasks/r/github.packages.yml
@@ -171,6 +171,7 @@ jobs:
           # ensure unlinking OpenSSL to avoid mixing OpenSSL in the
           # default path and OpenSSL installed by autobrew
           brew unlink openssl || :
+          find / -name 'evp.h'
       {{ macros.github_setup_local_r_repo(false, true)|indent }}
       - name: Prepare Dependency Installation
 
