ci: add `js/src/**/*.ts` and `js/test/**/*.ts` to key
Signed-off-by: abetomo <abe@enzou.tokyo>

--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -94,7 +94,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: js/.jest-cache
-          key: js-jest-cache-${{ runner.os }}-${{ hashFiles('js/yarn.lock') }}
+          key: js-jest-cache-${{ runner.os }}-${{ hashFiles('js/src/**/*.ts', 'js/test/**/*.ts', 'js/yarn.lock') }}
           restore-keys: js-jest-cache-${{ runner.os }}-
       - name: Install NodeJS
         uses: actions/setup-node@v3
@@ -124,7 +124,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: js/.jest-cache
-          key: js-jest-cache-${{ runner.os }}-${{ hashFiles('js/yarn.lock') }}
+          key: js-jest-cache-${{ runner.os }}-${{ hashFiles('js/src/**/*.ts', 'js/test/**/*.ts', 'js/yarn.lock') }}
           restore-keys: js-jest-cache-${{ runner.os }}-
       - name: Install NodeJS
         uses: actions/setup-node@v3
