--- a/dev/tasks/r/github.packages.yml
+++ b/dev/tasks/r/github.packages.yml
@@ -168,10 +168,10 @@ jobs:
           rig system setup-user-lib
           rig system add-pak
 
-          # ensure unlinking OpenSSL to avoid mixing OpenSSL in the
-          # default path and OpenSSL installed by autobrew
+          # ensure removing OpenSSL from the default paths to avoid
+          # mixing OpenSSL in the default paths and OpenSSL installed
+          # by autobrew
           brew unlink openssl || :
-          find / -name 'evp.h'
       {{ macros.github_setup_local_r_repo(false, true)|indent }}
       - name: Prepare Dependency Installation
 
