--- a/dev/tasks/r/github.packages.yml
+++ b/dev/tasks/r/github.packages.yml
@@ -188,7 +188,7 @@ jobs:
         run: brew install sccache
       - name: Find
         run: |
-          find / -name 'include/openssl' || :
+          find / |& grep include/openssl || :
       - name: Build Binary
         id: build
         shell: Rscript {0}
