--- a/r/_pkgdown.yml
+++ b/r/_pkgdown.yml
@@ -293,6 +293,7 @@ reference:
   desc: >
     R6 classes for Arrow data types.
   contents:
+  - Buffer-class
   - Scalar
   - Array
   - ChunkedArray
